# Mobile_App_AutoTest

./: .env.example  .gitignore  README.md  check_syntax.py  pyproject.toml  requirements.txt
reports/26_06_29_13_32_20/0e7c0b48/: report.md  task_meta.json
reports/26_06_29_13_32_20/81c783ee/: report.md  task_meta.json
src/mobile_automation/: __init__.py  config.py  logger.py  main.py
src/mobile_automation/core/: __init__.py  orchestrator.py  step_runner.py  task_context.py
src/mobile_automation/device/: __init__.py  adb_controller.py  device_manager.py  u2_controller.py
src/mobile_automation/exception/: __init__.py  error_handler.py  exceptions.py  retry_policy.py
src/mobile_automation/executor/: __init__.py  action_executor.py  click_executor.py  swipe_executor.py  type_executor.py  wait_executor.py
src/mobile_automation/llm/: __init__.py  base.py  claude_adapter.py  llm_service.py  message_builder.py  openai_adapter.py  qwen_adapter.py  token_budget.py  zhipu_adapter.py
src/mobile_automation/models/: __init__.py  action.py  enums.py  perception.py  task.py
src/mobile_automation/perception/: __init__.py  image_util.py  (+3 more)
tests/: conftest.py  test_action.py  test_action_executor.py  test_config.py  test_decision_prompt.py  test_device_manager.py  test_enums.py  test_llm_service.py  test_message_builder.py  test_orchestrator.py  test_page_diff.py  test_perception.py  test_popup_handler.py  test_reporting.py  test_retry_policy.py  test_screen_capture.py  test_step_runner.py  test_task_context.py  test_test_runner.py  test_token_budget.py  test_ui_tree.py
(+13 files in other folders)
