[project]
name = "mobile-automation"
version = "0.1.0"
description = "基于 Qwen-VL 多模态模型的移动端 AI 自动化操作框架"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "uiautomator2>=2.16.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
